web_icon,chage resume

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>About_sujith_website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="website Icon" type="png" href="website.png">
+    <link rel="website Icon" type="png" href="s icon.png">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -47,8 +47,8 @@
         </div>
         
         <div id="resume-download">
-            <a href="Sujith_Resume.docx" download="Sujith_Resume" class="minimal-btn">
-              Download Resume
+            <a href="Sujith_Resume.pdf" download="Sujith_Resume" class="minimal-btn">
+              View My Resume
             </a>
           </div>
           
