change resume button

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         
         <div id="resume-download">
             <a href="Sujith_Resume.pdf" download="Sujith_Resume" class="minimal-btn">
-              View My Resume
+              Download Resume
             </a>
           </div>
           
