--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <h1 class="neon-text">Welcome To My Digital Home!</h1>
         <p>Hi,<a class="im"> I'm</a> <strong> SUJITH E </strong></p>
         <div class="profile-info">
-            <p><i class="fa fa-phone"></i> +91 9361237516</p>
+            <p><i class="fas fa-map-marker-alt"></i>  Bengaluru, India</p>
+            <p><i class="fa fa-phone"></i>+91 9361237516</p>
             <p><i class="fas fa-envelope"></i> sujithe2003@gmail.com</p>
             <p>
                 <a href="https://www.linkedin.com/in/sujith-e-1b6014252" target="_blank" class="social-link">
