change popup1 tools

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <ul>
             <li><strong>Languages:</strong> HTML, CSS, JavaScript, Python, SQL</li>
             <li><strong>Frameworks:</strong> React.js, TensorFlow, Keras</li>
-            <li><strong>Tools:</strong> Git, Visual Studio Code, PyCharm</li>
+            <li><strong>Tools:</strong> Visual Studio,Android Studio, IDE, Jupyter Notebook, </li>
         </ul>
         <h4>Description</h4>
         <p>HealthCare Monitor is an advanced application leveraging deep learning for health management and disease detection. It identifies critical health conditions, including <strong>Brain tumors, COVID-19, Lung cancer, and Skin cancer</strong>, while calculating essential metrics like BMI and blood pressure. Utilizing Convolutional Neural Networks (CNNs) and Recurrent Neural Networks (RNNs), the app provides accurate disease diagnosis and personalized wellness assessments. By analyzing extensive health data, it empowers users to take control of their health and supports healthcare professionals in making informed decisions, paving the way for personalized medicine and preventive healthcare.</p>
