Add project application view images in project popup

--- a/index.html
+++ b/index.html
@@ -165,9 +165,10 @@
         <p><strong>Duration:</strong> November 2023 – May 2024</p>
         <p><strong>Technologies</strong></p>
         <ul>
+            <li><strong>Operating system:</strong> Compatible with Android and IOS distributions </li>
             <li><strong>Languages:</strong> HTML, CSS, JavaScript, Python, SQL</li>
             <li><strong>Frameworks:</strong> React.js, TensorFlow, Keras</li>
-            <li><strong>Tools:</strong> Visual Studio,Android Studio, IDE, Jupyter Notebook, </li>
+            <li><strong>Tools:</strong> Visual Studio, Android Studio, IDE, Jupyter Notebook</li>
         </ul>
         <h4>Description</h4>
         <p>HealthCare Monitor is an advanced application leveraging deep learning for health management and disease detection. It identifies critical health conditions, including <strong>Brain tumors, COVID-19, Lung cancer, and Skin cancer</strong>, while calculating essential metrics like BMI and blood pressure. Utilizing Convolutional Neural Networks (CNNs) and Recurrent Neural Networks (RNNs), the app provides accurate disease diagnosis and personalized wellness assessments. By analyzing extensive health data, it empowers users to take control of their health and supports healthcare professionals in making informed decisions, paving the way for personalized medicine and preventive healthcare.</p>
@@ -180,7 +181,71 @@
     <li><strong>Personalized Health Insights:</strong> Delivered tailored wellness assessments based on user-specific health data and metrics.</li>
     <li><strong>Real-time Monitoring:</strong> Enabled continuous monitoring of vital signs and health parameters for proactive health management.</li>
 </ul>
-
+<h4>Application View</h4>
+<div class="images-list">
+    <div class="images">
+        <img src="log.jpg">
+        <div class="para">
+            <p>Login Page</p>
+        </div>
+    </div>
+    <div class="images">
+        <img src="reg.jpg">
+        <div class="para">
+            <p>Register Page</p>
+        </div>
+    </div>
+    <div class="images">
+        <img src="home.jpg" alt="">
+        <div class="para">
+            <p>Home Page</p>
+        </div>
+    </div>
+    <div class="images">
+        <img src="health.jpg" alt="">
+        <div class="para">
+            <p>Health Calculator</p>
+        </div>
+    </div>
+    <div class="images">
+        <img src="medi.jpg" alt="">
+        <div class="para">
+            <p>Medi Consult</p>
+        </div>
+    </div>
+    <div class="images">
+        <img src="lang.jpg" alt="">
+        <div class="para">
+            <p>Choose Language</p>
+        </div>
+    </div>
+    <div class="images">
+        <img src="medicine.jpg" alt="">
+        <div class="para">
+            <p>BMI Calculator</p>
+        </div>
+    </div>
+    <div class="images">
+        <img src="brain.jpg" alt="">
+        <div class="para">
+            <p>Brain Tumor and Treatment Page</p>
+        </div>
+    </div>
+    <div class="images">
+        <img src="lung.jpg" alt="">
+        <div class="para">
+            <p>Lung Cancer and Precautions Page</p>
+        </div>
+    </div>
+    <div class="images">
+        <img src="covid.jpg" alt="">
+        <div class="para">
+            <p>Covis-19 and Treatment Page</p>
+        </div>
+</div>
+    
+    </div>
+      
     </div>
 </div>
 
