add conference certificate

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <div class="project-list">
         <!-- Project 1 -->
         <div class="project-item">
-            <h3>Human Disease Detection Using Machine Learning</h3>
+            <h3>Human Disease Detection Application Based On Deep Learning</h3>
             <p>Developed a CNN model for accurate disease detection from medical images.</p>
             <button class="project-link" onclick="openPopup('popup1')">View Project</button>
         </div>
@@ -160,8 +160,8 @@
 <div id="popup1" class="popup">
     <div class="popup-content">
         <span class="close-btn" onclick="closePopup('popup1')">&times;</span>
-        <h3>Human Disease Detection Using Machine Learning</h3>
-        <p><strong>Role:</strong> Machine Learning Developer</p>
+        <h3>Human Disease Detection Application Based On Deep Learning</h3>
+        <p><strong>Role:</strong> Developer</p>
         <p><strong>Duration:</strong> November 2023 – May 2024</p>
         <p><strong>Technologies</strong></p>
         <ul>
@@ -210,7 +210,7 @@
     <div class="images">
         <img src="medi.jpg" alt="">
         <div class="para">
-            <p>Medi Consult</p>
+            <p>Medical Consult</p>
         </div>
     </div>
     <div class="images">
@@ -234,7 +234,7 @@
     <div class="images">
         <img src="lung.jpg" alt="">
         <div class="para">
-            <p>Lung Cancer and Precautions Page</p>
+            <p>Lung Cancer and Precaution Page</p>
         </div>
     </div>
     <div class="images">
@@ -242,6 +242,10 @@
         <div class="para">
             <p>Covis-19 and Treatment Page</p>
         </div>
+    </div>
+<div class="certificate">
+    <h4>CONFERENCE CERTIFICATE</h4>
+    <img src="certificate.jpg" alt="">
 </div>
     
     </div>
