added online shopping web url

--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
         <p><strong>Role:</strong> Full Stack Developer</p>
         <p><strong>Duration:</strong> July 2024 – August 2024</p>
         <p><strong>Technologies:</strong> HTML, CSS, JavaScript, React.js</p>
+        <p ><strong>URL:</strong><a class="linktext" href="https://onlineshopping-three.vercel.app/"> https://onlineshopping-three.vercel.app/</a></p>
         <h4>Description</h4>
         <p>Designed and developed an interactive and responsive online shopping website, focusing on user experience and seamless functionality.</p>
         <h4>Key Features</h4>
