--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <section id="home" class="home-section">
     <div class="home-content">
         <h1 class="neon-text">Welcome To My Digital Home!</h1>
+        <img class="illus" src="illus.jpg" alt="">
         <p>Hi,<a class="im"> I'm</a> <strong> SUJITH E </strong></p>
         <div class="profile-info">
             <p><i class="fas fa-map-marker-alt"></i>  Bengaluru, India</p>
