edited some text

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="home-content">
         <h1 class="neon-text">Welcome To My Digital Home!</h1>
         <img class="illus" src="illus.jpg" alt="">
-        <p>Hi,<a class="im"> I'm</a> <strong> SUJITH E </strong></p>
+        <p>Hey,<a class="im"> I'm</a> <strong> SUJITH E </strong></p>
         <div class="profile-info">
             <p><i class="fas fa-map-marker-alt"></i>  Bengaluru, India</p>
             <p><i class="fa fa-phone"></i>+91 9361237516</p>
