--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="profile-info">
             <p><i class="fas fa-map-marker-alt"></i>  Bengaluru, India</p>
             <p><i class="fa fa-phone"></i>+91 9361237516</p>
-            <p><i class="fas fa-envelope"></i> sujithe2003@gmail.com</p>
+            <p><i class="fas fa-envelope"></i> esujith1103@gmail.com</p>
             <p>
                 <a href="https://www.linkedin.com/in/sujith-e-1b6014252" target="_blank" class="social-link">
                     <i class="fab fa-linkedin"></i> LinkedIn
@@ -302,7 +302,7 @@
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
         <h2>CONTACT</h2>
-        <p><i class="fas fa-envelope"></i> <a href="mailto:sujithe2003@gmail.com">sujithe2003@gmail.com</a></p>
+        <p><i class="fas fa-envelope"></i> <a href="mailto:esujith1103@gmail.com">esujith1103@gmail.com</a></p>
         <p><i class="fas fa-map-marker-alt"></i>Bengaluru, India</p>
         
         <!-- Social Icons -->
