--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="summary-box">
             <p class="quote">
-                I am a detail-oriented and motivated Fresher seeking an entry-level position as a Full Stack Developer, Python Developer, Web Developer, and Software Developer. With a strong foundational knowledge in <strong>HTML5</strong>, <strong>CSS3</strong>, <strong>JavaScript</strong>, <strong>React.js</strong>, <strong>Python</strong>, and <strong>SQL</strong>, I am proficient in both front-end and back-end development. I leverage modern frameworks and technologies to create efficient, user-centric applications, focusing on responsive and interactive user interfaces. My strong problem-solving abilities and commitment to continuous learning drive my passion for innovation in software development. I am eager to contribute to dynamic teams and engage in challenging projects that enhance my skills and provide value to users. 
+                I am a detail-oriented and motivated Fresher seeking an entry-level position as a Full Stack Developer, Python Developer, Web Developer, and Software Developer. With a strong foundational knowledge in <strong>HTML5</strong>, <strong>CSS3</strong>, <strong>JavaScript</strong>, <strong>React.js</strong>, <strong>jQuery</strong>, <strong>Python</strong>, <strong>Django</strong> and <strong>SQL</strong>, I am proficient in both front-end and back-end development. I leverage modern frameworks and technologies to create efficient, user-centric applications, focusing on responsive and interactive user interfaces. My strong problem-solving abilities and commitment to continuous learning drive my passion for innovation in software development. I am eager to contribute to dynamic teams and engage in challenging projects that enhance my skills and provide value to users. 
             </p>
         </div>
         
@@ -99,19 +99,19 @@
         <!-- Front-End Skills -->
         <div class="skill-item">
             <i class="fas fa-code"></i> Front-End:
-            <p>HTML, CSS, JavaScript, React.js</p>
+            <p>HTML, CSS, JavaScript, React.js, jQuery</p>
         </div>
 
         <!-- Back-End Skills -->
         <div class="skill-item">
             <i class="fas fa-server"></i> Back-End:
-            <p>Python, JavaScript</p>
+            <p>Python, JavaScript, Django</p>
         </div>
 
         <!-- Database Skills -->
         <div class="skill-item">
             <i class="fas fa-database"></i> Database:
-            <p>SQL</p>
+            <p>MY SQL, SQL</p>
         </div>
 
         <!-- Tools -->
@@ -123,7 +123,7 @@
         <!-- Version Control -->
         <div class="skill-item">
             <i class="fas fa-code-branch"></i> Version Control:
-            <p>Git</p>
+            <p>Git, GitHub</p>
         </div>
 
         <!-- Soft Skills -->
@@ -154,6 +154,14 @@
             <button class="project-link" onclick="openPopup('popup2')">View Project</button>
         </div>
     </div>
+    <div>
+        <h6 class="social-link" style="color: #f9f9f9;">For More</h6>
+        <a href="https://github.com/sujith003" target="_blank" class="social-link">For More Projects
+            <i class="fab fa-github"></i>
+        </a>
+
+    </div>
+    
 </section>
 
 <!-- Popup for Project 1 -->
