--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         
         <div id="resume-download">
-            <a href="Sujith-E-Resume.pdf" download="Sujith_Resume" class="minimal-btn"><i class="fa fa-download"></i>Download Resume
+            <a href="Sujith_Fresher_Resume.pdf" download="Sujith_Resume" class="minimal-btn"><i class="fa fa-download"></i>Download Resume
             </a>
           </div>
           
